Added automatic redirection after submitting, footer, styling

--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
     />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" className="d-flex flex-column min-vh-100"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
